--- a/src/assets/styles/Authentication.css
+++ b/src/assets/styles/Authentication.css
@@ -28,8 +28,8 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: fixed;
-    top: 100px;
+    position: relative;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
 }
