--- a/src/assets/styles/Authentication.css
+++ b/src/assets/styles/Authentication.css
@@ -14,7 +14,7 @@
 
 body {
     display: flex;
-    background-color: rgb(173, 173, 180);
+    /* background-color: rgb(173, 173, 180); */
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -194,7 +194,7 @@ input::placeholder {
     width: 768px;
     max-width: 100%;
     min-height: 500px;
-    
+    justify-self: center;
   }
   
 .form-container {
