--- a/src/assets/styles/homepage.css
+++ b/src/assets/styles/homepage.css
@@ -16,12 +16,12 @@
 
 body,
 html {
-  background-color: rgb(173, 173, 180);
+  /* background-color: rgb(173, 173, 180); */
   font-family: "good-matcha", sans-serif;
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  overflow-y: scroll !important; /*2 scroll bars*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -88,7 +88,7 @@ html {
   width: 100%;
   max-width: 1200px;
   text-align: center;
-  margin-top: 450px;
+  margin-top: 100px;
   margin-bottom: 50px;
 }
 
@@ -200,7 +200,7 @@ footer {
   }
 
   .hero-section {
-    margin-top: 350px;
+    margin-top: 800px;
   }
 
   .feature-item {
