--- a/src/assets/styles/channelmanager.css
+++ b/src/assets/styles/channelmanager.css
@@ -1,8 +1,8 @@
-.AddChannel{
-    height: 100%;
-    width: 100%;
+.AddChannel {
+  height: 100vh;
+  width: 100%;
 }
 
-.add-channel-form{
-    background-color: #F2F6FD;
+.add-channel-form {
+  background-color: #f2f6fd;
 }
