--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -1,196 +1,203 @@
 @font-face {
-    font-family: "good-matcha";
-    src: url("..\fonts\Good Matcha.otf") format("truetype");
+  font-family: "good-matcha";
+  src: url("..\fonts\Good Matcha.otf") format("truetype");
 }
 
-
-
-#root{
-    width: 100%; 
-    height: 100%; 
-    background: rgb(127,112,199);
-background: linear-gradient(180deg, rgba(127,112,199,1) 0%, rgba(90,99,162,1) 100%);
+#root {
+  width: 100%;
+  height: 100%;
+  background: rgb(127, 112, 199);
+  background: linear-gradient(
+    180deg,
+    rgba(127, 112, 199, 1) 0%,
+    rgba(90, 99, 162, 1) 100%
+  );
 }
 
-.dashboard{
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 10px;
-    align-items: flex-start;
+.dashboard {
+  height: 100vh;
+  display: flex;
+  transition: margin-left 0.3s ease-in-out;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.dashboard.sidebar-open .main-content {
+  margin-left: 300px;
+  width: calc(100% - 300px);
+}
+
+.dashboard.sidebar-closed .main-content {
+  margin-left: 0;
+  width: 100%;
 }
 
 /*MAIN SECTION*/
-.main{
-    background-color: #F2F6FD;
-    border-radius: 20px 0 0 20px;
-    width: 100%;
-    height: 100%;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-right: 50px;
-    padding-left: 50px;
+.main {
+  background-color: #f2f6fd;
+  border-radius: 20px 0 0 20px;
+  width: 100%;
+  height: 100vh;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-right: 50px;
+  padding-left: 50px;
+  transition: maring-left 0.3s ease-in-out, width 0.3s ease-in-out;
 }
 
-.chat-container{
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-
+.chat-container {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
 
 /*CHAT CONTAINER LEFT*/
-.chat-container-left{
-    width: 40%;
-    min-width: 150px;
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
+.chat-container-left {
+  width: 40%;
+  min-width: 150px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
 
-.ChatItem{
-    padding: 10px;
-    margin-bottom: 20px;
-    display: flex;
-    max-height: 60px;
-    flex-direction: row;
-    position: relative;
-    padding-right: 50px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+.ChatItem {
+  padding: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  max-height: 60px;
+  flex-direction: row;
+  position: relative;
+  padding-right: 50px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-
-.chat-item-profile-picture{
-    position: relative;
-    height: 40px;
-    width: 40px;
-    border: 3px solid #F1F5FD;
-    border-radius: 50px;
-    object-fit: cover;
-    margin: 5px;
-    align-self: center;
+.chat-item-profile-picture {
+  position: relative;
+  height: 40px;
+  width: 40px;
+  border: 3px solid #f1f5fd;
+  border-radius: 50px;
+  object-fit: cover;
+  margin: 5px;
+  align-self: center;
 }
 
-.chat-info{
-    height: 100%;
-    margin-left: 5px;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
+.chat-info {
+  height: 100%;
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
-.chat-name{
-    font-size: small;
-    color: #051C6B;
+.chat-name {
+  font-size: small;
+  color: #051c6b;
 }
 
-.chat-text{
-    font-size: x-small;
-    color: rgb(150, 150, 150);
-    display: -webkit-box;
+.chat-text {
+  font-size: x-small;
+  color: rgb(150, 150, 150);
+  display: -webkit-box;
   -webkit-line-clamp: 3; /* Number of lines before truncating */
   -webkit-box-orient: vertical;
   overflow: hidden;
-  
 }
 
-.chat-number-of-messages{
-    font-size: x-small;
-    align-self: center;
-    margin-left: 15px;
-    margin-right: 5px;
-    padding: 2px 4px 2px 4px;
-    background-color: rgb(219, 24, 24);
-    color: rgb(226, 222, 222);
-    border-radius: 50px;
-
+.chat-number-of-messages {
+  font-size: x-small;
+  align-self: center;
+  margin-left: 15px;
+  margin-right: 5px;
+  padding: 2px 4px 2px 4px;
+  background-color: rgb(219, 24, 24);
+  color: rgb(226, 222, 222);
+  border-radius: 50px;
 }
 
-.chat-date{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    font-size: x-small;
-    color: rgb(150, 150, 150);
+.chat-date {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: x-small;
+  color: rgb(150, 150, 150);
 }
 
 /*CHAT CONTAINER RIGHT*/
-.chat-container-right{
-    width: 60%;
-    min-width: none;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-
+.chat-container-right {
+  width: 60%;
+  min-width: none;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
-.opened-chat-banner{
-    background-color: #F9FCFE;
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+.opened-chat-banner {
+  background-color: #f9fcfe;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-.opened-chat-box{
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    height: 100%;
-    background-color: #F9FCFE;
-    padding: 20px 10px 20px 10px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+.opened-chat-box {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  height: 100%;
+  background-color: #f9fcfe;
+  padding: 20px 10px 20px 10px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-.chat-box-chat{
-    background-color: #F9FCFE;
-    height: 100%;
+.chat-box-chat {
+  background-color: #f9fcfe;
+  height: 100%;
 }
 
-.input-area{
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    text-align: center;
-    background-color: white;
+.input-area {
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  text-align: center;
+  background-color: white;
 }
 
-.text-input-area{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+.text-input-area {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-input{
-    background-color: white;
-    justify-self: center;
-    outline: none;
-    font-family: good-matcha;
-    color: #0e027b ;
+input {
+  background-color: white;
+  justify-self: center;
+  outline: none;
+  font-family: good-matcha;
+  color: #0e027b;
 }
 
-input::placeholder{
-    color: #929499;
-    position: absolute;
-    left: 15px;
-    font-size: small;
-    
+input::placeholder {
+  color: #929499;
+  position: absolute;
+  left: 15px;
+  font-size: small;
 }
 
-.microphone-icon{
-    font-size: large;
-    color: #756DBD;
-
+.microphone-icon {
+  font-size: large;
+  color: #756dbd;
 }
 
-.send-button{
-    font-size: x-large;
-    color: #756DBD;
-    margin-left: 10px;
+.send-button {
+  font-size: x-large;
+  color: #756dbd;
+  margin-left: 10px;
 }
