--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -206,6 +206,7 @@ input::placeholder {
   font-size: 20px;
   cursor: pointer;
   margin-left: 10px;
+  padding: 5px 5px;
 }
 
 .sendButton:hover {
